[gd_scene load_steps=4 format=3 uid="uid://dkyl3vgnqqbk5"]

[ext_resource type="Script" uid="uid://dlmnyfvmrvd16" path="res://scenes/units/shooter_bullet.gd" id="1_5igns"]
[ext_resource type="Texture2D" uid="uid://bvtx2w8yaolp6" path="res://assets/images/shooter_bullet.png" id="2_5igns"]

[sub_resource type="CircleShape2D" id="CircleShape2D_5igns"]

[node name="ShooterBullet" type="Area2D"]
script = ExtResource("1_5igns")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_5igns")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_5igns")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
